io-takamaka-examples/src/main/java/io/takamaka/tests/errors/fromcontractonnonstorage/C.java
package io.takamaka.tests.errors.fromcontractonnonstorage;

import io.takamaka.code.lang.FromContract;

public class C {
	public @FromContract void m() {}
}